--- a/giaodien_chinh2.css
+++ b/giaodien_chinh2.css
@@ -63,20 +63,31 @@ body {
 }
 
 
-
 .search-section {
-    /* background-image: url('./header-bg.webp'); */
-    background-image: url('./trg.png');
-    background-size: cover;
-    background-position: center center;
-    padding: 25px;
-    color: #fff;
-    /* text-align: center; */
-    /* height:400px ; */
-    height: 45%;
-
-    /* opacity: 0.3; */
+  position: relative; /* Để định vị pseudo-element */
+  padding: 25px;
+  color: #fff;
+  height: 45%;
+  background: none; /* Xóa trực tiếp ảnh nền khỏi thẻ */
+  overflow: hidden; /* Đảm bảo lớp phủ không tràn ra ngoài */
 }
+
+.search-section::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('./trg.png'); /* Ảnh nền */
+  background-size: cover;
+  background-position: center center;
+  filter: blur(5px); /* Làm mờ ảnh nền */
+  z-index: -1; /* Đưa pseudo-element ra sau nội dung */
+  opacity: 1; /* Điều chỉnh độ mờ (nếu cần) */
+}
+
+
 
 .search-section h1 {
     margin: 0;
