--- a/giaodien_chinh.css
+++ b/giaodien_chinh.css
@@ -7,7 +7,7 @@ body {
     
 }
 
-.duoitimkiem {
+/* .duoitimkiem {
   border-radius: 24px;
   color: #263a4d;
   display: flex;
@@ -22,7 +22,7 @@ body {
   position: relative;
   width: 100%;
   z-index: 3;
-}
+} */
 .header {
   background-color: #fff;
   padding: 20px 20px;
@@ -94,7 +94,8 @@ body {
   text-align: center;
   background: none;
   color: #fff;
-  height: 55%;
+  /* height: 55%; */
+  height: 550px;
   overflow: hidden;
   
 }
@@ -105,22 +106,196 @@ body {
   top: 0;
   left: 0;
   width: 100%;
+  
   height: 100%;
   background: url('./trg.png') center/cover no-repeat;
   filter: blur(5px);
   z-index: -1;
 }
 
-.search-section h1 {
+.search-section1 h1 {
   font-size: 36px;
   font-weight: bold;
   color: #060606;
   margin: 0 0 10px;
 }
 
-.search-section p {
+.search-section1 p {
   font-size: 18px;
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1000px) {
+  /* Vùng tìm kiếm */
+.search-section {
+  position: relative;
+  padding: 25px;
+  text-align: center;
+  background: none;
+  color: #fff;
+  /* height: 55%; */
+  height: 550px;
+  overflow: hidden;
+  
+}
+
+.search-section::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  
+  height: 100%;
+  background: url('./trg.png') center/cover no-repeat;
+  filter: blur(5px);
+  z-index: -1;
+}
+
+.search-section1 h1 {
+  font-size: 36px;
+  font-weight: bold;
+  color: #060606;
+  margin: 0 0 10px;
+}
+
+.search-section1 p {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+
+  .search-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 20px;
+    margin-bottom: 50px;
+    padding: 15px 20px;
+    max-width: 54%;
+    /*   margin: 0 auto 25px; */
+    margin: 25px auto 25px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    gap: 10px;
+  }
+  
+  .search-bar input {
+    width: 90%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+  }
+  
+  .search-bar button {
+    width: 90px;
+    padding: 10px;
+    background-color: #28a745;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .search-bar button:hover {
+    background-color: #28a745;
+  }
+  
+  /* Danh mục */
+  /* Danh sách các mục dưới thanh tìm kiếm */
+  .danhmuc{
+    background: #fff;
+    border-radius: 16px;
+    border-right: 1px solid #ececec;
+    /* display: flex; */
+    margin-top: 25px;
+    margin-left: 22%;
+    /* flex-direction: column; */
+    height: 298px;
+    width: 270px;
+    
+  }
+  
+  .danhmuc_1{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    /* overflow: hidden; */
+    padding: 0px 0;
+    width: 100%;
+   
+  }
+  
+  .danhmuc_1_option{
+          font-size: 16px;
+          font-weight: 350;
+          color: #263a4d;
+          padding: 15px;
+          /* margin-right: 70px; */
+  
+  }
+  
+  .danhmuc_1 {
+    position: relative;
+  }
+  
+  
+  .danhmuc_1_option:hover .danhmuc_1_option_child{
+    background-color: #fff;
+     display: block;
+  }
+  
+  
+  .danhmuc_1_option_child {
+  display: none;
+  background-color: #fff;
+  padding: 10px;
+  position: absolute;
+  left: calc(100%);
+  top: 0;
+  width: 650px;
+  height: 278px;
+  /* margin-left: 15px; */
+  border-radius: 15px;
+  }
+  
+  
+  .danhmuc_1_heder{
+    align-items: center;
+    border-top: 1px solid #ececec;
+    /* display: flex; */
+    /* height: 30px; */
+    justify-content: flex-end;
+    padding: 14px 14px 8px 21px;
+  }
+  
+  .danhmuc_1_heder-pag{
+    align-items: center;
+    display: flex;
+    gap: 11px;
+    height: 85%;
+    justify-content: space-between;
+    width: 100%;
+  }
+  
+  .danhmuc_1_heder-text{
+    /* color: #7f878f; */
+    color: #7f878f;
+    font-size: 14px;
+    font-weight: 500;
+  
+  }
+  .cach {
+    margin-left: 70px; /* Tạo khoảng cách giữa chữ và icon */
+  }
+  
+  .fa-angle-right {
+    font-size: 16px; /* Kích thước icon */
+  }
+ 
 }
 
 .search-bar {
@@ -132,6 +307,7 @@ body {
   margin-bottom: 50px;
   padding: 15px 20px;
   max-width: 54%;
+  /*   margin: 0 auto 25px; */
   margin: 25px auto 25px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   gap: 10px;
@@ -146,7 +322,7 @@ body {
 }
 
 .search-bar button {
-  width: 10%;
+  width: 90px;
   padding: 10px;
   background-color: #28a745;
   color: #fff;
@@ -253,7 +429,11 @@ border-radius: 15px;
   font-size: 16px; /* Kích thước icon */
 }
 
+.a{
 
+  margin: auto;
+  width: 50%;
+}
 
 
 
@@ -451,7 +631,7 @@ border-radius: 15px;
 
 
 
-/*  */
+/* a4 */
 .featured-industries {
     text-align: center;
     padding: 40px 20px;
@@ -481,21 +661,36 @@ border-radius: 15px;
 
  
   
-  .industries-grid {
+  /* .industries-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     justify-items: center;
     overflow: hidden;
     margin: 0 auto;
-  }
+
+    background-color: blue;
+    
+  } */
+  .industries-grid {
+    display: flex;
+    overflow: hidden;
+     /* Ẩn các mục tràn ra ngoài */
+     margin: 0 auto; /* Căn giữa slider */
+     width: 1000px; /* Chiều rộng cố định */
+        max-width: 100%; /* Chiều rộng tối đa */
+       
+     
+}
+
 
 
   
  
   .industry-card:hover {
     transform: translateY(-5px);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
+    box-shadow: 0 4px 8px rgba(5, 241, 111, 0.2);
   }
   
   .industry-card img {
@@ -506,14 +701,14 @@ border-radius: 15px;
   
 .industry-card p {
   font-size: 14px;
-  color: #27ae60;
+  /* color: #27ae60; */
   margin: 0;
 }
 
-  .industry-card h3 {
+  .industry-card h3 a {
     font-size: 18px;
     color: #333;
-    margin-bottom: 10px;
+
   }
 
 
@@ -553,16 +748,30 @@ border-radius: 15px;
 
 /* Slide hiển thị */
 .slick-slide > div {
-  background: #f4f4f4; /* Màu nền của slide */
+  background: #fff; /* Màu nền của slide */
   border-radius: 8px;  /* Bo góc */
   padding: 10px;
   transition: all 0.3s ease;
 }
 
-/* Khi hover vào slide */
-.slick-slide > div:hover {
-  transform: scale(1.05);  /* Phóng to slide khi hover */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Hiệu ứng đổ bóng */
+
+.text-group {
+  background-color: #fff;
+
+  display: flex;
+  flex-direction: column; /* Xếp h3 và p theo chiều dọc */
+  align-items: center; /* Căn giữa h3 và p */
+/* Tạo khoảng cách nhỏ giữa h3 và p */
+}
+
+.text-group h3 a {
+  display: inline-block; /* Đảm bảo thẻ là khối nội dòng */
+  max-width: 200px; /* Đặt chiều rộng tối đa */
+  white-space: nowrap; /* Không cho phép xuống dòng */
+  overflow: hidden; /* Ẩn phần tràn ra ngoài */
+  text-overflow: ellipsis; /* Thêm dấu ... */
+  text-decoration: none; /* Loại bỏ gạch chân */
+  
 }
 
 
@@ -630,6 +839,84 @@ border-radius: 15px;
     width: 30px;
     margin: 5px;
   }
+
+  
+
+/* Slide-Show-to */
+.slider-container {
+  position: relative;
+  max-width: 100%;
+  margin: auto;
+}
+
+.slider {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.slides {
+  display: flex;
+  transition: transform 3s ease;
+}
+
+.slides img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.slider-container button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  padding: 10px;
+  z-index: 1;
+  border-radius: 10px;
+
+  opacity: 0;
+}
+
+.slider-container:hover .prev,
+.slider-container:hover .next {
+  opacity: 1;
+}
+
+.prev {
+  left: 10px;
+}
+
+.next {
+  right: 10px;
+}
+
+.dots {
+  text-align: center;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+}
+
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 5px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+}
+
+.dot.active {
+  background-color: white;
+}
+
   
 
 
