--- a/giaodien_chinh.css
+++ b/giaodien_chinh.css
@@ -87,7 +87,8 @@ body {
   background-color: #343a40;
 }
 
-/* Vùng tìm kiếm */
+/* tim kiem  */
+
 .search-section {
   position: relative;
   padding: 25px;
@@ -106,46 +107,6 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  
-  height: 100%;
-  background: url('./trg.png') center/cover no-repeat;
-  filter: blur(5px);
-  z-index: -1;
-}
-
-.search-section1 h1 {
-  font-size: 36px;
-  font-weight: bold;
-  color: #060606;
-  margin: 0 0 10px;
-}
-
-.search-section1 p {
-  font-size: 18px;
-  margin-bottom: 20px;
-}
-
-@media screen and (min-width: 1000px) {
-  /* Vùng tìm kiếm */
-.search-section {
-  position: relative;
-  padding: 25px;
-  text-align: center;
-  background: none;
-  color: #fff;
-  /* height: 55%; */
-  height: 550px;
-  overflow: hidden;
-  
-}
-
-.search-section::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  
   height: 100%;
   background: url('./trg.png') center/cover no-repeat;
   filter: blur(5px);
@@ -165,137 +126,10 @@ body {
 }
 
 
-  .search-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
-    border-radius: 20px;
-    margin-bottom: 50px;
-    padding: 15px 20px;
-    max-width: 54%;
-    /*   margin: 0 auto 25px; */
-    margin: 25px auto 25px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    gap: 10px;
-  }
-  
-  .search-bar input {
-    width: 90%;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-  }
-  
-  .search-bar button {
-    width: 90px;
-    padding: 10px;
-    background-color: #28a745;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .search-bar button:hover {
-    background-color: #28a745;
-  }
-  
-  /* Danh mục */
-  /* Danh sách các mục dưới thanh tìm kiếm */
-  .danhmuc{
-    background: #fff;
-    border-radius: 16px;
-    border-right: 1px solid #ececec;
-    /* display: flex; */
-    margin-top: 25px;
-    margin-left: 22%;
-    /* flex-direction: column; */
-    height: 298px;
-    width: 270px;
-    
-  }
-  
-  .danhmuc_1{
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    /* overflow: hidden; */
-    padding: 0px 0;
-    width: 100%;
-   
-  }
-  
-  .danhmuc_1_option{
-          font-size: 16px;
-          font-weight: 350;
-          color: #263a4d;
-          padding: 15px;
-          /* margin-right: 70px; */
-  
-  }
-  
-  .danhmuc_1 {
-    position: relative;
-  }
-  
-  
-  .danhmuc_1_option:hover .danhmuc_1_option_child{
-    background-color: #fff;
-     display: block;
-  }
-  
-  
-  .danhmuc_1_option_child {
-  display: none;
-  background-color: #fff;
-  padding: 10px;
-  position: absolute;
-  left: calc(100%);
-  top: 0;
-  width: 650px;
-  height: 278px;
-  /* margin-left: 15px; */
-  border-radius: 15px;
-  }
-  
-  
-  .danhmuc_1_heder{
-    align-items: center;
-    border-top: 1px solid #ececec;
-    /* display: flex; */
-    /* height: 30px; */
-    justify-content: flex-end;
-    padding: 14px 14px 8px 21px;
-  }
-  
-  .danhmuc_1_heder-pag{
-    align-items: center;
-    display: flex;
-    gap: 11px;
-    height: 85%;
-    justify-content: space-between;
-    width: 100%;
-  }
-  
-  .danhmuc_1_heder-text{
-    /* color: #7f878f; */
-    color: #7f878f;
-    font-size: 14px;
-    font-weight: 500;
-  
-  }
-  .cach {
-    margin-left: 70px; /* Tạo khoảng cách giữa chữ và icon */
-  }
-  
-  .fa-angle-right {
-    font-size: 16px; /* Kích thước icon */
-  }
- 
+.aa{
+  width: 60%;
+  height: auto;
+  margin: auto;
 }
 
 .search-bar {
@@ -306,7 +140,9 @@ body {
   border-radius: 20px;
   margin-bottom: 50px;
   padding: 15px 20px;
-  max-width: 54%;
+  /* max-width: 54%; */
+  width: 100%;
+
   /*   margin: 0 auto 25px; */
   margin: 25px auto 25px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -344,11 +180,14 @@ body {
   border-radius: 16px;
   border-right: 1px solid #ececec;
   /* display: flex; */
-  margin-top: 25px;
-  margin-left: 22%;
+  /* margin-top: 25px; */
+  /* margin-left: 22%; */
   /* flex-direction: column; */
-  height: 298px;
-  width: 270px;
+  /* height: 298px; */
+  /* width: 270px; */
+width: 27%;
+height: 50%;
+/* padding: 10px; */
   
 }
 
@@ -368,17 +207,19 @@ body {
         color: #263a4d;
         padding: 15px;
         /* margin-right: 70px; */
-
+        overflow: hidden;
 }
 
 .danhmuc_1 {
   position: relative;
+
 }
 
 
 .danhmuc_1_option:hover .danhmuc_1_option_child{
   background-color: #fff;
    display: block;
+
 }
 
 
@@ -388,11 +229,14 @@ background-color: #fff;
 padding: 10px;
 position: absolute;
 left: calc(100%);
-top: 0;
-width: 650px;
-height: 278px;
+top: 0px;
+/* width: 245%;
+height: 278px; */
+width: 280%;
+height: 108%;
 /* margin-left: 15px; */
 border-radius: 15px;
+z-index: 2;
 }
 
 
@@ -429,11 +273,19 @@ border-radius: 15px;
   font-size: 16px; /* Kích thước icon */
 }
 
-.a{
+.a img{
 
   margin: auto;
-  width: 50%;
+  width: 44%;
+  position: absolute;
+  top: 38%;
+  left: 37%;
+  border-radius: 10px;
+  height: 45%;
+  z-index: 1;
 }
+
+
 
 
 
@@ -683,9 +535,6 @@ border-radius: 15px;
      
 }
 
-
-
-  
  
   .industry-card:hover {
     transform: translateY(-5px);
@@ -919,7 +768,152 @@ border-radius: 15px;
 
   
 
+/* Quy tắc áp dụng cho màn hình nhỏ hơn 170700px */
+@media screen and (max-width: 1700px) {
+  /* Thay đổi kiểu hoặc ẩn/hiện phần tử */
+  
+.search-bar input {
+  width: 50%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+}
 
+.search-bar button {
+  width: 90px;
+  padding: 10px;
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+
+
+/* Danh mục */
+/* Danh sách các mục dưới thanh tìm kiếm */
+.danhmuc{
+  background: #fff;
+  border-radius: 16px;
+  border-right: 1px solid #ececec;
+  /* display: flex; */
+  /* margin-top: 25px; */
+  /* margin-left: 22%; */
+  /* flex-direction: column; */
+  /* height: 298px; */
+  /* width: 270px; */
+width: 29%;
+height: 60%;
+/* padding: 10px; */
+  
+}
+
+.danhmuc_1{
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  /* overflow: hidden; */
+  padding: 0px 0;
+  width: 100%;
+ 
+}
+
+.danhmuc_1_option{
+        font-size: 16px;
+        font-weight: 350;
+        color: #263a4d;
+        padding: 15px;
+        justify-content: space-between;
+        /* margin-right: 70px; */
+        white-space: nowrap;
+
+}
+
+.danhmuc_1 {
+  position: relative;
+
+}
+
+
+.danhmuc_1_option:hover .danhmuc_1_option_child{
+  background-color: #fff;
+   display: block;
+
+}
+
+
+.danhmuc_1_option_child {
+display: none;
+background-color: #fff;
+padding: 10px;
+position: absolute;
+left: calc(100%);
+top: 0px;
+/* width: 245%;
+height: 278px; */
+width: 253%;
+height: 108%;
+/* margin-left: 15px; */
+border-radius: 15px;
+z-index: 2;
+}
+
+
+.danhmuc_1_heder{
+  align-items: center;
+  border-top: 1px solid #ececec;
+  /* display: flex; */
+  /* height: 30px; */
+  justify-content: flex-end;
+  padding: 14px 14px 8px 21px;
+}
+
+.danhmuc_1_heder-pag{
+  align-items: center;
+  display: flex;
+  gap: 11px;
+  height: 85%;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.danhmuc_1_heder-text{
+  /* color: #7f878f; */
+  color: #7f878f;
+  font-size: 14px;
+  font-weight: 500;
+
+}
+.cach {
+  margin-left: 50px;
+  
+}
+
+.fa-angle-right {
+  font-size: 16px; /* Kích thước icon */
+}
+.a img{
+
+  margin: auto;
+  width: 42%;
+  position: absolute;
+  top: 38%;
+  left: 39%;
+  border-radius: 10px;
+  height: 45%;
+  z-index: 1;
+}
+
+}
+
+/* @media screen and (max-width: 1362px){
+          
+
+} */
 
 
 
