--- a/dn_dk.css
+++ b/dn_dk.css
@@ -172,3 +172,10 @@ a {
     color: #27ae60;
     text-decoration: none;
 }
+
+#khoa {
+    width: 300px; /* Điều chỉnh chiều rộng theo nhu cầu */
+}
+
+
+
